Fix fail2ban jail definitions
See issue #743 for details. Basically the jail definitions have changed.

--- a/roles/common/templates/etc_fail2ban_jail.local.j2
+++ b/roles/common/templates/etc_fail2ban_jail.local.j2
@@ -6,7 +6,7 @@ banaction = iptables-multiport
 action    = %(action_)s
 
 # JAILS
-[ssh]
+[sshd]
 enabled   = true
 maxretry  = 3
 
@@ -14,10 +14,19 @@ maxretry  = 3
 enabled   = true
 banaction = iptables-allports
 
-[ssh-ddos]
+[sshd-ddos]
 enabled   = true
 
-[apache]
+[apache-auth]
+enabled = true
+
+[apache-badbots]
+enabled = true
+
+[apache-overflows]
+enabled = true
+
+[apache-noscript]
 enabled = true
 
 [postfix]
